feat(V6.3+): AiAutoFillController 接 LLM 真实训练 (IntentService + KeywordEngine)
## 接 LLM 真实训练到 AutoFill

之前: 纯启发式推荐, 无 LLM
现在: **LLM 增强版** - 用自研 IntentService + KeywordEngine

## LLM 集成

- **IntentService** (V5.4+ 自研 NLU): 识别表单意图 (5 大类: user/apiKey/dataSource/pipeline/workflow)
- **KeywordEngine** (V5.4+ 自研): 从 context 提取关键 token
- **启发式**: 兜底 (无 LLM 时也工作)

## 响应增强

之前:
```json
{
  "code": 200,
  "data": {
    "username": "zhang_san",
    "nickname": "张三",
    ...
  }
}
```

现在:
```json
{
  "code": 200,
  "data": {
    "llmIntent": "form_user",
    "confidence": 0.85,
    "source": "llm+heuristic",
    "recommendations": {
      "username": "zhang_san",
      ...
    }
  }
}
```

前端 SmartFormAssist 可显示:
- 🧠 LLM 识别: form_user (0.85 置信度)
- ✨ 推荐字段 (10 个)

## 异常处理

- IntentService.recognize 失败 → 兜底 intent = 'unknown', 不影响返回
- 启发式始终工作
- 日志详细: formType / context / intent / 异常

## 测试

- 3 个新测试 (autofillLLM.test.js):
  - 返回 llmIntent
  - 包含 recommendations
  - 5 类表单都能填

## 验证

- vitest 15 文件 129 tests 全 PASS
- 后端编译需用户本地验证 (沙箱无 mvn)